// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Podium > should render Podium from a full leaderboard 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          Radar
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          2
        </div>
        <div
          class="score"
        >
          18398
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowCyborg
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          1
        </div>
        <div
          class="score"
        >
          18456
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="spacer"
      />
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowWhirlwind
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          3
        </div>
        <div
          class="score"
        >
          15492
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Podium > should render Podium from a leaderboard with 1 player 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="nickname"
      />
      <div
        class="stack"
      >
        <div
          class="position"
        >
          2
        </div>
        <div
          class="score"
        />
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowCyborg
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          1
        </div>
        <div
          class="score"
        >
          18456
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="spacer"
      />
      <div
        class="nickname"
      />
      <div
        class="stack"
      >
        <div
          class="position"
        >
          3
        </div>
        <div
          class="score"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Podium > should render Podium from a leaderboard with 2 players 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          Radar
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          2
        </div>
        <div
          class="score"
        >
          18398
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowCyborg
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          1
        </div>
        <div
          class="score"
        >
          18456
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="spacer"
      />
      <div
        class="nickname"
      />
      <div
        class="stack"
      >
        <div
          class="position"
        >
          3
        </div>
        <div
          class="score"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Podium > should render Podium from a leaderboard with 3 players 1`] = `
<div>
  <div
    class="main"
  >
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          Radar
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          2
        </div>
        <div
          class="score"
        >
          18398
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowCyborg
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          1
        </div>
        <div
          class="score"
        >
          18456
        </div>
      </div>
    </div>
    <div
      class="column"
    >
      <div
        class="spacer"
      />
      <div
        class="spacer"
      />
      <div
        class="nickname"
      >
        <div
          class="main"
        >
          ShadowWhirlwind
        </div>
      </div>
      <div
        class="stack"
      >
        <div
          class="position"
        >
          3
        </div>
        <div
          class="score"
        >
          15492
        </div>
      </div>
    </div>
  </div>
</div>
`;
